[tool.poetry]
name = "sha256"
version = "0.0.1"
description = ""
authors = ["EulerBlind <elvisiky@163.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"


[tool.poetry.dev-dependencies]
pytest = "^6.0.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "douban"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true